--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       --bg: #0d1117;
       --fg: #e6edf3;
       --muted: #8b949e;
-      --accent: #58a6ff;
+      --accent: #14b8a6; /* teal blue */
       --card: #161b22;
       --radius: 12px;
     }
@@ -169,7 +169,7 @@
   <!-- About -->
   <section id="about">
     <h2>About Me</h2>
-    <p>I’m an Information Technology student passionate about cybersecurity and automation. I create tools that save analysts time and streamline repetitive security workflows. Currently interning as a SOC Analyst while building open-source projects in Python.</p>
+    <p>I’m an Information Technology student passionate about cybersecurity and automation. I create tools that save analysts time and streamline repetitive security workflows. I also build open-source projects in Python.</p>
   </section>
 
   <!-- Projects -->
@@ -178,13 +178,13 @@
     <div class="projects-grid">
       <div class="project-card">
         <h3>Log Parsing Tool</h3>
-        <p>A Python tool using pandas, re, and argparse to filter and analyze logs across multiple formats.</p>
-        <div class="tags"><span class="tag">Python</span><span class="tag">pandas</span><span class="tag">Regex</span></div>
+        <p>A Python tool using re and argparse to filter and analyze logs across multiple formats.</p>
+        <div class="tags"><span class="tag">Python</span><span class="tag">Regex</span></div>
       </div>
       <div class="project-card">
         <h3>Password Cipher Tool</h3>
-        <p>Implements Argon2 hashing and Fernet encryption with CLI support and safe password storage.</p>
-        <div class="tags"><span class="tag">Cryptography</span><span class="tag">Argon2</span></div>
+        <p>Implements secure hashing and Fernet encryption with CLI support and safe password storage.</p>
+        <div class="tags"><span class="tag">Cryptography</span><span class="tag">Security</span></div>
       </div>
       <div class="project-card">
         <h3>Regex Patterns Tool</h3>
@@ -198,9 +198,9 @@
   <section id="skills">
     <h2>Skills & Tools</h2>
     <div class="skills-list">
-      <span>Python</span><span>Regex</span><span>pandas</span>
-      <span>Argon2</span><span>Cryptography</span>
-      <span>Networking Labs</span><span>HTB/THM Labs</span>
+      <span>Python</span><span>Regex</span>
+      <span>Cryptography</span><span>Networking Labs</span>
+      <span>HTB/THM Labs</span>
       <span>GitHub</span><span>Linux</span>
     </div>
   </section>
@@ -210,6 +210,7 @@
     <h2>Contact</h2>
     <p>📧 <a href="mailto:Janahanysalah@gmail.com">Janahanysalah@gmail.com</a></p>
     <p>🌐 <a href="https://github.com/codedByJana" target="_blank">github.com/codedByJana</a></p>
+    <p>💼 <a href="http://www.linkedin.com/in/janahanysalah" target="_blank">linkedin.com/in/janahanysalah</a></p>
   </section>
 
   <footer>
