--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       --bg: #0d1117;
       --fg: #e6edf3;
       --muted: #8b949e;
-      --accent: #14b8a6; /* teal blue */
+      --accent: #367588; /* teal blue */
       --card: #161b22;
       --radius: 12px;
     }
