--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="8ball.png" sizes="64x64">
+
   <title>Jana Hany — Portfolio</title>
   
   <!-- Favicon (8-ball) -->
