--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="8ball.png" sizes="32x32">
+  <script src="https://kit.fontawesome.com/2c7fc28a2f.js" crossorigin="anonymous"></script>
 
   <title>Jana Hany — Portfolio</title>
   
@@ -234,12 +235,25 @@
   </section>
 
   <!-- Contact -->
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>📧 <a href="mailto:Janahanysalah@gmail.com">Janahanysalah@gmail.com</a></p>
-    <p>🌐 <a href="https://github.com/codedByJana" target="_blank">github.com/codedByJana</a></p>
-    <p>💼 <a href="http://www.linkedin.com/in/janahanysalah" target="_blank">linkedin.com/in/janahanysalah</a></p>
-  </section>
+ <section id="contact">
+  <h2>Contact</h2>
+  <p>
+    <i class="fas fa-envelope"></i>
+    <a href="mailto:Janahanysalah@gmail.com">Janahanysalah@gmail.com</a>
+  </p>
+  <p>
+    <i class="fab fa-github"></i>
+    <a href="https://github.com/codedByJana" target="_blank">github.com/codedByJana</a>
+  </p>
+  <p>
+    <i class="fab fa-linkedin"></i>
+    <a href="http://www.linkedin.com/in/janahanysalah" target="_blank">linkedin.com/in/janahanysalah</a>
+  </p>
+    <p>
+      <i class="fab fa-x-twitter"></i>
+      <a href="https://x.com/_JanaHany">X.com/_JanaHany</a>
+  </p>
+</section>
 
   <footer>
     © <span id="year"></span> Jana Hany — Cybersecurity & Automation Portfolio
