--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400&family=Silkscreen&display=swap" rel="stylesheet">
 
-  <!-- FontAwesome -->
-  <script src="https://kit.fontawesome.com/2c7fc28a2f.js" crossorigin="anonymous"></script>
-
   <style>
     :root {
       --bg: #042026;
@@ -171,7 +168,7 @@
   <!-- Header -->
   <header>
     <div class="logo">
-      <i class="fas fa-circle"></i> <!-- 8-ball stand-in -->
+       <img src="8ball.png" alt="Logo" class="logo"><!-- 8-ball stand-in -->
       Jana Hany
     </div>
     <nav>
