--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   <!-- Header -->
   <header>
     <div class="logo">
-       <img src="8ball.png" alt="Logo" class="logo"><!-- 8-ball stand-in -->
+       <img src="assests/8ball.png" alt="Logo" class="logo"><!-- 8-ball stand-in -->
       Jana Hany
     </div>
     <nav>
