--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
   <!-- Header -->
   <header>
     <div class="logo">
-       <img src="assests/8ball.png" alt="Logo" class="logo"><!-- 8-ball stand-in -->
+        <!-- 8-ball stand-in -->
+         <link rel="icon" type="image/png" href="8ball.png" sizes="32x32" class = "logo">
       Jana Hany
     </div>
     <nav>
