--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   <header>
     <div class="logo">
         <!-- 8-ball stand-in -->
-         <link rel="icon" type="image/png" href="8ball.png" sizes="32x32" class = "logo">
+ <img href="logo.png" alt="Logo" class="logo">
       Jana Hany
     </div>
     <nav>
