--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   <header>
     <div class="logo">
         <!-- 8-ball stand-in -->
- <img href="logo.png" alt="Logo" class="logo">
+ <img src="8ball.png" alt="Logo" class="logo-img">
       Jana Hany
     </div>
     <nav>
