--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   <header>
     <div class="logo">
         <!-- 8-ball stand-in -->
- <img src="8ball.png" alt="Logo" class="logo-img">
+ <img src="8ball-logo.png" alt="Logo" class="logo-img">
       Jana Hany
     </div>
     <nav>
