--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
       font-family: var(--font-head);
       font-size: 1.2rem;
     }
+    .logo-img {
+    height: 28px; 
+    width: auto;
+    }
     nav a {
       margin-left: 1.5rem;
       font-weight: bold;
