--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <h1>Hello, I’m Jana Hany</h1>
     <p>IT student with a passion for Cybersecurity — I build Python tools for SOC analysts and create security projects focused on networking, cryptography, and log analysis.</p>
     <div class="cta">
-      <a href="https://drive.google.com/file/d/1e4_sRb-hGPeT7DtQSbYTiCdFbGkyL0Ig/view?usp=drive_link" class="btn" target="_blank">Download Résumé</a>
+      <a href="https://drive.google.com/file/d/1e4_sRb-hGPeT7DtQSbYTiCdFbGkyL0Ig/view?usp=drivesdk" class="btn" target="_blank">Download Résumé</a>
       <a href="https://github.com/codedByJana?tab=repositories" class="btn">View Projects</a>
     </div>
   </section>
