--- a/index.html
+++ b/index.html
@@ -243,15 +243,15 @@
   </p>
   <p>
     <i class="fab fa-github"></i>
-    <a href="https://github.com/codedByJana" target="_blank">github.com/codedByJana</a>
+    <a href="https://github.com/codedByJana" target="_blank">codedByJana</a>
   </p>
   <p>
     <i class="fab fa-linkedin"></i>
-    <a href="http://www.linkedin.com/in/janahanysalah" target="_blank">linkedin.com/in/janahanysalah</a>
+    <a href="http://www.linkedin.com/in/janahanysalah" target="_blank">janahanysalah</a>
   </p>
     <p>
       <i class="fab fa-x-twitter"></i>
-      <a href="https://x.com/_JanaHany">X.com/_JanaHany</a>
+      <a href="https://x.com/_JanaHany">@_JanaHany</a>
   </p>
 </section>
 
